--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: ['develop']
     env:
-  REGISTRY: "192.168.0.48:32000"
-  IMAGE_NAME: "myapp"
+  REGISTRY: "k8s-01"
+  IMAGE_NAME: "mynginx:local"
   NAMESPACE: "myapp-namespace"
-  DOCKERFILE: "./home/fablicio/Projeto/Dockerfile"
+  DOCKERFILE: "./Projetos/Dockerfile"
   DOCKERCONTEXT: "."
   jobs:
   build-and-push-image:
