--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,7 +12,7 @@ on:
 =======
 
 env:
-  REGISTRY: "192.168.0.48"
+  REGISTRY: "k8s-01"
   IMAGE_NAME: "mynginx:local"
   NAMESPACE: "myapp-namespace"
   DOCKERFILE: "/home/fablicio/Projetos/Dockerfile"
