--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-and-push-image:
-    runs-on: [self-hosted, X64, Linux, MyWiselyChosenLabel]
+    runs-on: [self-hosted, X64, Linux]
     permissions:
       contents: read
       packages: write
