--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build docker image
-        run: cd ./home/runner/Projetos
+        run: cd /home/runner/Projetos
         run: "docker build --no-cache -f ${{ env.DOCKERFILE }} -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.builddate }} ${{ env.DOCKERCONTEXT }}"
 
       - name: Push docker image to registry
