--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ env:
   REGISTRY: "k8s-01"
   IMAGE_NAME: "mynginx"
   NAMESPACE: "nginx-namespace"
-  DOCKERFILE: "./home/fablicio/Projetos"
+  DOCKERFILE: "./src/Projetos/Dockerfile"
   DOCKERCONTEXT: "."
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build docker image
-        run: "docker build -t --no-cache -f ${{ env.DOCKERFILE }} -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.builddate }} ${{ env.DOCKERCONTEXT }}"
+        run: "docker build --no-cache -f ${{ env.DOCKERFILE }} -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.builddate }} ${{ env.DOCKERCONTEXT }}"
 
       - name: Push docker image to registry
         run: "docker image push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.builddate }}"
