--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ name: MyApp
 
 jobs:
   CallTemplate:
-    uses:   github.com/fablicio/pipeline-templates/blob/master/.github/workflows/develop.yml
+    uses:   .github.com/fablicio/pipeline-templates/blob/master/.github/workflows/develop.yml
     with:
       project: "MyApp develop"
       dockerfile: "Dockerfile"
