--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ name: MyApp
 
 jobs:
   CallTemplate:
-    uses:   .github/workflows/deploydevelop.yml
+    uses:   fablicio/pipeline-templates/.github/workflows/deploydevelop.yml
     with:
       project: "MyApp develop"
       dockerfile: "Dockerfile"
