--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   CallTemplate:
-    uses: ./.github/workflows/deploydevelop.yml@master
+    uses: .github/workflows/deploydevelop.yml
     with:
       project: "MyApp develop"
       dockerfile: "Dockerfile"
