--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   CallTemplate:
-    uses: /fablicio/RSYNC/.github/workflows/develop.yml@master
+    uses: github.com/fablicio/RSYNC/.github/workflows/develop.yml@master
     with:
       project: "MyApp develop"
       dockerfile: "Dockerfile"
