--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,7 +8,7 @@ jobs:
   CallTemplate:
     uses: ./.github/workflows/deploydevelop.yml@v1
     with:
-      project: "MyApp develop"
+      project: "myapp_develop"
       dockerfile: "Dockerfile"
       environment: "dev"
     secrets: inherit
