--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   CallReusablePipeline:
-    uses: github.com/fablicio/pipeline-templates/.github/workflows/reusable-pipeline.yml
+    uses: ./.github/workflows/reusable-pipeline.yml
     with:
       project: "myapp_develop"
       dockerfile: "Dockerfile"
