--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,10 +6,25 @@ on:
       - develop
 
 jobs:
-  CallReusablePipeline:
-    uses: ./pipeline-templates/.github/workflows/reusable-pipeline.yml
-    with:
-      project: "myapp_develop"
-      dockerfile: "Dockerfile"
-      environment: "dev"
-    secrets: inherit
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build and push Docker image
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t myapp_develop:${{ github.sha }} -f Dockerfile .
+          docker push myapp_develop:${{ github.sha }}
+
+      - name: Deploy to environment
+        run: |
+          echo "Deploying to dev environment"
+          # Adicione seus comandos de implantação aqui
