--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -21,4 +21,4 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t myapp_develop:${{ github.sha }} -f Dockerfile --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t usuario/myapp_develop:${{ github.sha }} -f Dockerfile --push .
