--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Set up Docker Buildx
         run: |
-          docker buildx create --name mybuilder --use
-          docker buildx inspect mybuilder --bootstrap
+          docker buildx create --use
+          docker buildx inspect --bootstrap
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
