--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image from local
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t usuario/myapp_develop:${{ github.sha }} -f Dockerfile --push .
+          docker tag myapp_local_image:latest usuario/ubuntu:${{ github.sha }}
+          docker push usuario/ubuntu:${{ github.sha }}
