--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -21,7 +21,11 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and push Docker image from local
+      - name: Build Docker image locally
         run: |
-          docker tag myapp_local_image:latest usuario/ubuntu:${{ github.sha }}
-          docker push usuario/ubuntu:${{ github.sha }}
+          docker build -t myapp_local_image:latest -f Dockerfile .
+
+      - name: Tag and push Docker image
+        run: |
+          docker tag myapp_local_image:latest usuario/myapp_develop:${{ github.sha }}
+          docker push usuario/myapp_develop:${{ github.sha }}
