--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Build Docker image locally
         run: |
-          docker build -t myapp_local_image:latest -f Dockerfile .
+          docker build -t fabliciosoares/myapp:latest -f Dockerfile .
 
       - name: Tag and push Docker image
         run: |
-          docker tag myapp_local_image:latest usuario/myapp_develop:${{ github.sha }}
-          docker push usuario/myapp_develop:${{ github.sha }}
+          docker tag fabliciosoares/myapp:latest fabliciosoares/myapp:${{ github.sha }}
+          docker push fabliciosoares/myapp:${{ github.sha }}
