--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,9 +7,8 @@ on:
 
 jobs:
   CallReusablePipeline:
-    uses: ./pipeline-templates/.github/workflows/reusable-pipeline.yml@main
+    uses: ./.github/workflows/reusable-pipeline.yml
     with:
       docker_username: ${{ secrets.DOCKER_USERNAME }}
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
       image_name: "fabliciosoares/myapp"
-    secrets: inherit
