--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,3 +12,4 @@ jobs:
       docker_username: ${{ secrets.DOCKER_USERNAME }}
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
       image_name: "fabliciosoares/myapp"
+    secrets: inherit
